# Aventureiro

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
aventureiro/: Makefile  README.md
aventureiro/data/: config.json  crew.json
aventureiro/src/: combat.c  combat.h  data_loader.c  data_loader.h  game.c  game.h  main.c  map.c  player.c  player.h  types.h  ui.c  ui.h  util.h
aventureiro/tests/: smoke_test.py
data/: config.json  rooms.json  weapons.json
docs/: aventureiro.p.bas  handover_aventureiro_c.md
management/: README.md  ideias-futuras.md
management/backlog/: 11-melhorias-jogabilidade.md  12-fidelidade-formulas.md  13-perseguicao-fiel.md  14-mapa-ascii.md  25-densidade-labirinto.md  26-barra-comandos.md  27-mapa-antes-da-descricao.md  28-redesenho-ao-redimensionar-terminal.md  29-twin-reporta-uma-linha-so.md  30-hud-corrompe-terminal-estreito.md  33-sala-sem-item-nao-marcava-examinada.md  34-troca-arma-10-nao-selecionavel.md
scripts/: install-deps.sh
src/: combat.h  data_loader.c  game.c  main.c  map.c  map.h  player.c  ui.h  util.h
